Fix underlined links and input spacing

--- a/src/app/panels/query/query.css
+++ b/src/app/panels/query/query.css
@@ -7,16 +7,21 @@
 }
 .begin-query {
   position:absolute;
-  left:13px;
+  left:10px;
   top:5px;
 }
 .end-query {
   position:absolute;
-  right:15px;
+  right:10px;
   top:5px;
 }
+
+.end-query i, .begin-query i {
+  margin: 0px;
+}
+
 .panel-query {
-  padding-left: 35px !important;
+  padding-left: 25px !important;
   height: 31px !important;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -28,7 +33,7 @@
 }
 
 .form-search:hover .has-remove {
-  padding-left: 50px !important;
+  padding-left: 40px !important;
 }
 .remove-query {
   opacity: 0;
